# server

./: CMakeLists.txt  helper.c  helper.h  main1.c  server.c  tictactoe_env.c  tictactoe_env.h  tictactoe_trans.c
TCP/: request.c  request.h  response.c  response.h  response_status.h
games/rockpaperscissors/: rockpaperscissors_env.c  rockpaperscissors_env.h  rockpaperscissors_trans.c  rockpaperscissors_trans.h
games/tictactoe/: tictactoe_env.c  tictactoe_env.h  tictactoe_trans.c  tictactoe_trans.h
server/: client.c  client.h  game_env.c  game_env.h  helper.c  helper.h  server_env.c  server_env.h
